Create squirrel page and update link on index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Odin Recipes</h1>
         <p><a href="recipes/lasagna.html">Lasagna</a></p>
         <p><a href="recipes/peanut-stew.html">African Peanut Stew</a></p>
+        <p><a href="recipes/squirrel.html">Slow-Cooker Squirrel</a></p>
     </body>
 </html>
