Change recipe links to a list

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="recipes/lasagna.html">Lasagna</a></p>
-        <p><a href="recipes/peanut-stew.html">African Peanut Stew</a></p>
-        <p><a href="recipes/squirrel.html">Slow-Cooker Squirrel</a></p>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/peanut-stew.html">African Peanut Stew</a></li>
+            <li><a href="recipes/squirrel.html">Slow-Cooker Squirrel</a></li>
+        </ul>
     </body>
 </html>
